--- a/index.html
+++ b/index.html
@@ -1,47 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-
-    <title>Pokemon</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pokemon</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-warning">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Pokemon</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Pokemones</a>
-                    </li>
-                </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                    <button class="btn btn-danger" type="submit">Buscar</button>
-                </form>
-            </div>
-        </div>
-    </nav>
-    <section class="container my-4">
-        <div class="card" style="width: 18rem; " id="carta_pokemon">
-            
-        </div>
-    </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-        crossorigin="anonymous"></script>
-    <script src="assets/js/code.js"></script>
+  <nav class="navbar navbar-expand-lg bg-warning">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Pokemon</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Pokemones</a>
+          </li>
+        </ul>
+        <form class="d-flex" role="search">
+          <select class="form-select" id="tipo_pokemon">
+            <option value="">Elija una opcion</option>
+            <option value="1">Acero</option>
+            <option value="2">Agua</option>
+            <option value="3">Bicho</option>
+            <option value="4">Dragon</option>
+            <option value="5">Electrico</option>
+            <option value="6">Fantasma</option>
+            <option value="7">Fuego</option>
+            <option value="8">Hada</option>
+            <option value="9">Hielo</option>
+            <option value="10">Lucha</option>
+            <option value="11">Normal</option>
+            <option value="12">Planta</option>
+            <option value="13">Psiquico</option>
+            <option value="14">Roca</option>
+            <option value="15">Tierra</option>
+            <option value="16">Veneno</option>
+            <option value="17">Volador</option>
+            <option value="18">Siniestro</option>
+          </select>
+          <input class="form-control me-2" type="search" placeholder="Buscar" id="busquedaTexto">
+          <button class="btn btn-danger" type="button" id="btn-busqueda-api">Buscar</button>
+        </form>
+      </div>
+    </div>
+  </nav>
+  <section class="container my-5 ">
+    <div class="row row-cols-2 row-cols-md-3 g-4 justify-content-center" id="carta_pokemon"></div>
+    <div class=" d-flex justify-content-between" id="paginacion"></div>
+  </section>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+
+  <script src="assets/js/code.js"></script>
 </body>
 
 </html>
